# ApiHub

./: .cnb.yml  .env.example  LICENSE  README.md  config.py  main.py  pyproject.toml  test_batch_import.py
.trae/documents/: openapi_optimization_plan.md  school_admin_model_plan.md  school_management_api_plan.md
alembic/: env.py
alembic/versions/: 3439274afeb7_init.py  3cab4d9c55fc_init1.py  570a79a34eca_ini2.py  5ed44ae0725c_init.py  8acc8419d03d_init3.py  adea0129e548_init.py  b0f952727b36_init.py  cefd0a609d4e_init.py  d10f7426fa5b_init666.py  e638fd5df542_init.py  e66dba6975c2_init6.py  facf9f501ef0_init.py  fad8a15229e7_init.py
app/: config.py  main.py
app/auth/: model.py  route.py  server.py
app/core/: database.py  health.py
app/school/: model.py  route.py  server.py
app/sentence/: model.py  route.py  server.py
app/user/: model.py  route.py  server.py
